<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ECC_Android_App</string>
    <string name="hello_world_list">Hello world! List Activity</string>
    <string name="hello_world_map">Hello World! Map Activity </string>
    <string name="hello_world_notes">Hello world! Notes Activity </string>
    <string name="action_settings">Settings</string>
    <string name="login_username">User ID</string>
    <string name="login_username_hint">KU Email</string>
    <string name="login_userpass">Password</string>
    <string name="login_userpass_hint">User Password</string>
    <string name="title_activity_company_list">CompanyList</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="title_activity_map">Map</string>
    <string name="title_activity_notes">Notes</string>

    <!-- Notes Tab Strings -->

    <string name="tab1_name">List</string>
    <string name="tab2_name">Maps</string>
    <string name="tab3_name">Notes</string>
    <string name="noteArchiveFilename">KU_ECC_App_noteArchive</string>
    <string name="noteRecordSeparator">|r|</string>
    <string name="noteSeparatorMarker">|s|</string>
    <string name="make_new_note">Make a new note</string>

    <!-- composeNote Subview Strings -->

    <string name="note_title">Note Title:</string>
    <string name="note_body">Note Body:</string>
    <string name="save_note">Save Note</string>
    <string name="discard_draft">Discard Draft</string>
    <string name="emptyNoteDialogTitle">Invalid Note</string>
    <string name="emptyNoteDialogMessage">Please create both a title and body text for your note.</string>
    <string name="emptyNoteDialogOK">OK</string>
    <string name="edit_note">Edit Note</string>
    <string name="delete_note">Delete Note</string>

    <!--
    <string name="titleTagStart">|title|</string>
    <string name="titleTagEnd">|/title|</string>
    -->


    <!-- End ComposeNote Subactivity Strings -->


    <!-- End Notes Tab Strings -->

    <string name="title_activity_company_detail">CompanyDetail</string>
    <string name="hello_world">Hello world!</string>
    <string name="desc_list_item_icon">Menu</string>

</resources>
