<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.EECS_581.ecc_android_app.Notes">

    <!-- The below View Flipper changes the view between the two primary states of the Notes
         section. -->

    <ViewFlipper
        android:id="@+id/notesViewFlipper"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <!-- Primary State: View Notes List -->
        <RelativeLayout
            android:id="@+id/notesListScreen"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Interviews"
                        android:id="@+id/interviewsCheckbox" />

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Info Sessions"
                        android:id="@+id/infoCheckbox" />

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Deadlines"
                        android:id="@+id/deadlinesCheckbox" />
                </LinearLayout>

                <Button
                    android:id="@+id/make_new_note_button"
                    android:text="@string/make_new_note"
                    android:layout_column="1"
                    android:layout_span="2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <ListView
                    android:id="@+id/notesListView"
                    android:layout_column="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </RelativeLayout>

        <!-- Secondary State: View Individual Note -->
        <LinearLayout
            android:id="@+id/viewNoteScreen"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/noteTextArea"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:orientation="vertical">

                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/typeSpinner" />

                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/companySpinner" />

                <TextView
                    android:id="@+id/noteTitleTextView"
                    android:text="@string/note_title"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <EditText
                    android:id="@+id/noteTitleEditView"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/noteBodyTextView"
                    android:text="@string/note_body"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <EditText
                    android:id="@+id/noteBodyEditView"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/noteButtonArea"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/saveNoteButton"
                        android:text="@string/save_note"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"/>

                    <Button
                        android:id="@+id/discardDraftButton"
                        android:text="@string/discard_draft"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"/>
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/editNoteButton"
                        android:text="@string/edit_note"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"/>

                    <Button
                        android:id="@+id/deleteNoteButton"
                        android:text="@string/delete_note"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"/>
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ViewFlipper>
</RelativeLayout>
